# CMake_23399

./: CMakeLists.txt  README.md  icons.qrc
src/: main.cpp
